jobs/OpenCOG_U1710_AtomSpace.log
Started by user [8mha:////4L2jTPWu9zIb56dnp8RqVObesKKV2DVGI0jJXlam1DqAAAAAlx+LCAAAAAAAAP9b85aBtbiIQTGjNKU4P08vOT+vOD8nVc83PyU1x6OyILUoJzMv2y+/JJUBAhiZGBgqihhk0NSjKDWzXb3RdlLBUSYGJk8GtpzUvPSSDB8G5tKinBIGIZ+sxLJE/ZzEvHT94JKizLx0a6BxUmjGOUNodHsLgAzWEgZu/dLi1CL9xJTczDwAj6GcLcAAAAA=[0madmin
Building in workspace /var/lib/jenkins/workspace/OpenCOG_U1710_AtomSpace
[OpenCOG_U1710_AtomSpace] $ /bin/sh -xe /tmp/jenkins3676433233561989459.sh
+ COGDIR=../OpenCOG_U1710
+ . ../OpenCOG_U1710/build.docker/docker.env
+ CID=cd2c10bd99c40a5af3e51d5c2f43382e45f84e807ae4ba61467f723bc9403e3c
+ DKRUNROOT=docker exec --user root   cd2c10bd99c40a5af3e51d5c2f43382e45f84e807ae4ba61467f723bc9403e3c
+ DKRUNUSER=docker exec --user jenkins  cd2c10bd99c40a5af3e51d5c2f43382e45f84e807ae4ba61467f723bc9403e3c
+ UID=125
+ GID=132
+ LOGFILE=/var/lib/jenkins/jobs/OpenCOG_U1710_AtomSpace/builds/18/log
+ cat


**********************************************************
**********************************************************
**********************************************************
**********************************************************
*****                                                *****
*****                  Atomspace TEST                *****
*****                                                *****
**********************************************************
**********************************************************
**********************************************************
**********************************************************


+ echo GIT_COMMIT=
GIT_COMMIT=
+ echo GIT_BRANCH=
GIT_BRANCH=
+ echo GIT_URL=
GIT_URL=
+ WDIR=atomspace
+ JOBDIR=../OpenCOG_U1710/dependencies
+ cat
+ chmod +x ../OpenCOG_U1710/dependencies/job1
+ docker exec --user jenkins cd2c10bd99c40a5af3e51d5c2f43382e45f84e807ae4ba61467f723bc9403e3c bash dependencies/job1
+ cd atomspace
+ cd build
+ LANG=en_US.UTF-8
+ make -j8 test
[  0%] Built target opencog_atom_types
[  1%] Built target truthvalue
[  3%] Built target atombase
[  5%] Built target atomutils
[  5%] Built target attentionbank
[ 13%] Built target atomcore
[ 14%] Built target clearbox
[ 15%] Built target atomspace
[ 16%] Generating TVMergeUTest.cpp
[ 16%] Generating EvidenceCountTruthValueUTest.cpp
[ 16%] Generating ComposeLinkUTest.cpp
[ 17%] Generating SimpleTruthValueUTest.cpp
[ 17%] Generating BetaReduceUTest.cpp
[ 17%] Generating AttentionValueUTest.cpp
[ 19%] Built target atomspaceutils
[ 20%] Built target lambda
[ 21%] Generating DefineLinkUTest.cpp
[ 22%] Generating VariablesUTest.cpp
Scanning dependencies of target SimpleTruthValueUTest
Scanning dependencies of target ComposeLinkUTest
Scanning dependencies of target EvidenceCountTruthValueUTest
Scanning dependencies of target TVMergeUTest
Scanning dependencies of target BetaReduceUTest
Scanning dependencies of target AttentionValueUTest
[ 22%] Building CXX object tests/truthvalue/CMakeFiles/SimpleTruthValueUTest.dir/SimpleTruthValueUTest.cpp.o
[ 22%] Building CXX object tests/truthvalue/CMakeFiles/EvidenceCountTruthValueUTest.dir/EvidenceCountTruthValueUTest.cpp.o
[ 23%] Building CXX object tests/truthvalue/CMakeFiles/TVMergeUTest.dir/TVMergeUTest.cpp.o
[ 23%] Building CXX object tests/atoms/CMakeFiles/ComposeLinkUTest.dir/ComposeLinkUTest.cpp.o
[ 23%] Building CXX object tests/truthvalue/CMakeFiles/AttentionValueUTest.dir/AttentionValueUTest.cpp.o
[ 23%] Building CXX object tests/atoms/CMakeFiles/BetaReduceUTest.dir/BetaReduceUTest.cpp.o
Scanning dependencies of target DefineLinkUTest
Scanning dependencies of target VariablesUTest
[ 23%] Building CXX object tests/atoms/CMakeFiles/DefineLinkUTest.dir/DefineLinkUTest.cpp.o
[ 23%] Building CXX object tests/atoms/CMakeFiles/VariablesUTest.dir/VariablesUTest.cpp.o
[ 23%] Linking CXX executable EvidenceCountTruthValueUTest
[ 23%] Built target EvidenceCountTruthValueUTest
[ 23%] Built target unify
[ 25%] Generating AtomSpaceUtilsUTest.cpp
[ 26%] Linking CXX executable SimpleTruthValueUTest
Scanning dependencies of target AtomSpaceUtilsUTest
[ 26%] Building CXX object tests/atomspaceutils/CMakeFiles/AtomSpaceUtilsUTest.dir/AtomSpaceUtilsUTest.cpp.o
[ 26%] Built target SimpleTruthValueUTest
[ 26%] Generating AttentionUTest.cpp
Scanning dependencies of target AttentionUTest
[ 26%] Building CXX object tests/attentionbank/CMakeFiles/AttentionUTest.dir/AttentionUTest.cpp.o
[ 26%] Linking CXX executable TVMergeUTest
[ 26%] Built target TVMergeUTest
[ 27%] Built target type_constructors
[ 27%] Built target atomspace_cython
[ 29%] Built target smob
[ 29%] Generating TLBUTest.cpp
Scanning dependencies of target TLBUTest
[ 29%] Building CXX object tests/atomspace/CMakeFiles/TLBUTest.dir/TLBUTest.cpp.o
[ 29%] Linking CXX executable ComposeLinkUTest
[ 29%] Linking CXX executable DefineLinkUTest
[ 29%] Built target ComposeLinkUTest
[ 29%] Built target DefineLinkUTest
[ 30%] Generating AtomUTest.cpp
[ 30%] Generating NodeUTest.cpp
Scanning dependencies of target AtomUTest
Scanning dependencies of target NodeUTest
[ 30%] Building CXX object tests/atomspace/CMakeFiles/AtomUTest.dir/AtomUTest.cpp.o
[ 30%] Building CXX object tests/atomspace/CMakeFiles/NodeUTest.dir/NodeUTest.cpp.o
[ 30%] Linking CXX executable VariablesUTest
[ 30%] Linking CXX executable BetaReduceUTest
[ 30%] Built target VariablesUTest
[ 30%] Generating AtomTableUTest.cpp
[ 30%] Built target BetaReduceUTest
[ 30%] Generating LinkUTest.cpp
Scanning dependencies of target AtomTableUTest
[ 30%] Building CXX object tests/atomspace/CMakeFiles/AtomTableUTest.dir/AtomTableUTest.cpp.o
Scanning dependencies of target LinkUTest
[ 30%] Building CXX object tests/atomspace/CMakeFiles/LinkUTest.dir/LinkUTest.cpp.o
[ 32%] Linking CXX executable AttentionValueUTest
[ 32%] Built target AttentionValueUTest
[ 32%] Generating AtomSpaceAsyncUTest.cpp
In file included from /home/opencog/atomspace/build/tests/attentionbank/AttentionUTest.cpp:24:0:
/home/opencog/atomspace/build/tests/attentionbank/../../../tests/attentionbank/AttentionUTest.cxxtest: In member function ‘void AttentionUTest::testGetRandomAtoms()’:
/home/opencog/atomspace/build/tests/attentionbank/../../../tests/attentionbank/AttentionUTest.cxxtest:69:28: error: ‘class opencog::AttentionBank’ has no member named ‘getRandomAtom’; did you mean ‘getRandomAtomNotInAF’?
             Handle h = _ab.getRandomAtom();
                            ^~~~~~~~~~~~~
                            getRandomAtomNotInAF
Scanning dependencies of target AtomSpaceAsyncUTest
[ 32%] Building CXX object tests/atomspace/CMakeFiles/AtomSpaceAsyncUTest.dir/AtomSpaceAsyncUTest.cpp.o
tests/attentionbank/CMakeFiles/AttentionUTest.dir/build.make:66: recipe for target 'tests/attentionbank/CMakeFiles/AttentionUTest.dir/AttentionUTest.cpp.o' failed
make[3]: *** [tests/attentionbank/CMakeFiles/AttentionUTest.dir/AttentionUTest.cpp.o] Error 1
CMakeFiles/Makefile2:4469: recipe for target 'tests/attentionbank/CMakeFiles/AttentionUTest.dir/all' failed
make[2]: *** [tests/attentionbank/CMakeFiles/AttentionUTest.dir/all] Error 2
make[2]: *** Waiting for unfinished jobs....
[ 32%] Linking CXX executable AtomSpaceUtilsUTest
[ 32%] Built target AtomSpaceUtilsUTest
[ 32%] Linking CXX executable TLBUTest
[ 32%] Built target TLBUTest
[ 32%] Linking CXX executable NodeUTest
[ 32%] Built target NodeUTest
[ 32%] Linking CXX executable LinkUTest
[ 32%] Built target LinkUTest
[ 32%] Linking CXX executable AtomUTest
[ 32%] Built target AtomUTest
[ 32%] Linking CXX executable AtomTableUTest
[ 32%] Built target AtomTableUTest
[ 32%] Linking CXX executable AtomSpaceAsyncUTest
[ 32%] Built target AtomSpaceAsyncUTest
CMakeFiles/Makefile2:74: recipe for target 'CMakeFiles/test.dir/rule' failed
Makefile:186: recipe for target 'test' failed
make[1]: *** [CMakeFiles/test.dir/rule] Error 2
make: *** [test] Error 2
+ DSTATUS=TESTFAIL
+ /var/lib/jenkins/status/updateStatus TESTFAIL /var/lib/jenkins/jobs/OpenCOG_U1710_AtomSpace/builds/18/log OpenCOG_U1710_AtomSpace
Already up-to-date.
